force-app/main/default/objects/Traffic_Impact__c/Traffic_Impact__c.object-meta.xml
<CustomObject>
    <description>Traffic condition cache for Aqua route planning. One record per crew per day, optionally one per stop for ETA overrides. Provider-agnostic — populated by whichever routing integration is active.</description>
    <label>Traffic Impact</label>
    <nameField>
        <displayFormat>TI-{00000}</displayFormat>
        <label>Traffic Impact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traffic Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>