force-app/main/default/objects/Traffic_Impact__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Traffic Impacts</relationshipLabel>
    <relationshipName>Traffic_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>