force-app/main/default/objects/Traffic_Impact__c/fields/Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Delay_Minutes__c</fullName>
    <description>Additional delay vs. baseline drive time. Positive = delayed. Drives traffic risk badge color logic (Low &lt;5, Medium 5-15, High 15-30, Severe &gt;30).</description>
    <label>Delay (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>