force-app/main/default/objects/Traffic_Impact__c/fields/Here_Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>Here_Incident_Id__c</fullName>
    <externalId>true</externalId>
    <label>HERE Incident Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>