force-app/main/default/objects/Traffic_Impact__c/fields/Impact_Type__c.field-meta.xml
<CustomField>
    <fullName>Impact_Type__c</fullName>
    <label>Impact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Congestion</fullName>
            </value>
            <value>
                <fullName>Reroute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>