force-app/main/default/objects/Traffic_Impact__c/fields/Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>Incident_Id__c</fullName>
    <description>External incident identifier from the traffic provider (TomTom or HERE). Used to deduplicate on re-sync — if this ID already exists for today, skip re-insert. Blank for OSRM-sourced records.</description>
    <label>Incident ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>