force-app/main/default/objects/Traffic_Impact__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Timestamp of last provider refresh. Console warns if stale (&gt;30 min) — same threshold as GPS staleness warning.</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>