force-app/main/default/objects/Traffic_Impact__c/fields/Road__c.field-meta.xml
<CustomField>
    <fullName>Road__c</fullName>
    <description>Road name or highway segment affected by this traffic incident. Populated from TomTom or HERE incident feed when available (e.g. I-77 Northbound between Exit 23 and Exit 25). Blank for OSRM-sourced route delay records.</description>
    <label>Affected Road</label>
    <length>200</length>
    <type>Text</type>
</CustomField>