force-app/main/default/objects/Traffic_Impact__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Day</label>
    <referenceTo>Schedule_Day__c</referenceTo>
    <relationshipLabel>Traffic Impacts</relationshipLabel>
    <relationshipName>Traffic_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>