force-app/main/default/objects/Traffic_Impact__c/fields/Schedule_Stop__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional. When populated, this record overrides ETA for a single stop rather than the whole day. Null = day-level impact record.</description>
    <label>Schedule Stop</label>
    <referenceTo>Schedule_Stop__c</referenceTo>
    <relationshipLabel>Traffic Impacts</relationshipLabel>
    <relationshipName>Traffic_Impacts_Stop</relationshipName>
    <type>Lookup</type>
</CustomField>