force-app/main/default/objects/Traffic_Impact__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Traffic data provider for this impact record. OSRM = open-source routing (current, no traffic data). Google = Google Maps Routes API (traffic-aware, requires key). TomTom / HERE = real-time incident feeds (require key). Manual = dispatcher override.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSRM</fullName>
                <default>true</default>
                <label>OSRM</label>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>TomTom</fullName>
            </value>
            <value>
                <fullName>HERE</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>